[package]
name = "memalloc"
version = "0.2.0"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8"

[dependencies]

[dependencies.synctools]
version = "0.3.0"

[features]
default = ["buddy_32m"]

buddy_32m = []
buddy_64m = []
buddy_128m = []
buddy_256m = []
buddy_512m = []
buddy_1g = []
buddy_2g = []
buddy_4g = []
buddy_8g = []
buddy_16g = []
buddy_32g = []
buddy_64g = []
buddy_128g = []
buddy_256g = []
buddy_512g = []
buddy_1t = []
buddy_2t = []
buddy_4t = []
buddy_8t = []