[package]
name = "memac"
version = "0.3.2"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2021"
description = "A custom memory allocator using slab and buddy allocators."
repository = "https://github.com/ytakano/memalloc/"
keywords = ["no_std", "allocator" ]
categories = [ "no-std", "embedded" ]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/ytakano/memalloc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8"

[dependencies]

[dependencies.synctools]
version = "0.3"

[features]
default = ["buddy_32m"]

buddy_32m = []
buddy_64m = []
buddy_128m = []
buddy_256m = []
buddy_512m = []
buddy_1g = []
buddy_2g = []
buddy_4g = []
buddy_8g = []
buddy_16g = []
buddy_32g = []
buddy_64g = []
buddy_128g = []
buddy_256g = []
buddy_512g = []
buddy_1t = []
buddy_2t = []
buddy_4t = []
buddy_8t = []
