[package]
name = "memac"
version = "0.5.0"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2021"
description = "A custom memory allocator using slab and buddy allocators."
repository = "https://github.com/ytakano/memalloc/"
keywords = ["no_std", "allocator" ]
categories = [ "no-std", "embedded" ]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/ytakano/memalloc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8"

[dependencies]

[dependencies.synctools]
version = "0.3"
